--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 ---
 layout: page
-title: "About"
-description: "This is what I do."
+title: "Tentang"
+description: "Tentang situs ini."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>Situs ini adalah situs <i>un-official</i> yang di buat pada tanggal 10 Agustus 2016 (Masih blogger dan culun), Lalu perubahan besar pada tanggal 16 Agustus 2016 dengan dipindahkan ke hosting(github pages). Dan aktif mengirim postingan pada tanggal 17 Agustus 2016.<br/>
+Dari mana sumber berita pada situs ini ? <br/>
+Saya mendapat banyak berita tentang semua topik di situs ini dari banyak sumber, seperti Google, Grup Facebook, dan akun official Isyana Sarasvati.<br/>
+Pertanyaan lain bisa kalian kirim ke saya via <a href="/articles/contact"> Direct Message (Pesan Langsung)</a> atau via <a href="https://www.facebook.com">facebook</a>.<br/>
+Profil admin dimana ? <a href="/admin/nurfaqihimam">disini</a><br/>
+Dah! jangan diperpanjang lagi! -_-
