--- a/cari.html
+++ b/cari.html
@@ -3,7 +3,8 @@ layout: search
 title: "Cari Artikel"
 subtitle: "Cari artikel tentang Isyana di situs ini."
 ---
-<form action="/search.html" method="get">
+
+<form action="/cari.html" method="get">
   <label for="search-box">Cari</label>
   <input type="text" id="search-box" name="query">
   <input type="submit" value="search">
@@ -27,3 +28,4 @@ subtitle: "Cari artikel tentang Isyana di situs ini."
 </script>
 <script src="js/lunr.min.js"></script>
 <script src="js/cari.js"></script>
+<script id="dsq-count-scr" src="//isyanationblog.disqus.com/count.js" async="async"></script>
