--- a/cari.html
+++ b/cari.html
@@ -4,7 +4,7 @@ title: "Cari Artikel"
 subtitle: "Cari artikel tentang Isyana di situs ini."
 ---
 
-<form action="/cari.html" method="get">
+<form action="/articles/cari" method="get">
   <label for="search-box">Cari</label>
   <input type="text" id="search-box" name="query">
   <input type="submit" value="search">
