--- a/cari.html
+++ b/cari.html
@@ -1,31 +1,22 @@
----
-layout: search
-title: "Cari Artikel"
-subtitle: "Cari artikel tentang Isyana di situs ini."
----
-
-<form action="/articles/cari" method="get">
-  <label for="search-box">Cari</label>
-  <input type="text" id="search-box" name="query">
-  <input type="submit" value="search">
-</form>
-
-<ul id="search-results"></ul>
-
-<script>
-  window.store = {
-    {% for post in site.posts %}
-      "{{ post.url | slugify }}": {
-        "title": "{{ post.title | xml_escape }}",
-        "author": "{{ post.author | xml_escape }}",
-        "category": "{{ post.category | xml_escape }}",
-        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-        "url": "{{ post.url | xml_escape }}"
-      }
-      {% unless forloop.last %},{% endunless %}
-    {% endfor %}
-  };
-</script>
-<script src="js/lunr.min.js"></script>
-<script src="js/cari.js"></script>
-<script id="dsq-count-scr" src="//isyanationblog.disqus.com/count.js" async="async"></script>
+ ---
+ layout: search
+ title: Cari Artikel
+ permalink: cari/
+ sitemap: false
+ ---
+ 
+  <div id="pencarian" class="home">
+     <script>
+         (function() {
+             var cx = '018095232152484104878:lql_j0hzzp8';
+             var gcse = document.createElement('script');
+             gcse.type = 'text/javascript';
+             gcse.async = true;
+             gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+             '//www.google.com/cse/cse.js?cx=' + cx;
+             var s = document.getElementsByTagName('script')[0];
+             s.parentNode.insertBefore(gcse, s);
+         })();
+     </script>
+     <gcse:search queryParameterName="searchString"></gcse:search>
+ </div>
