--- a/cari.html
+++ b/cari.html
@@ -2,6 +2,25 @@
 layout: search
 title: Cari Artikel
 ---
+
+ <div class="grid" id="searchBar">
+      <div>
+          <div id="search">
+              <form role="search" method="get" action="{{site.baseurl}}cari/">
+                  <input id="searchString" name="searchString"
+                         placeholder="Cari tentang Isyana Sarasvati." type="text">
+                  <input id="searchButton" name="googleSearchName" type="button" value="Search">
+              </form>
+          </div>
+
+          <div id="archives">
+              Cari dengan <a title="The complete archive of {{ site.name }}'s Blog by category"
+                     href="{{site.baseurl}}categoryview">kategori</a>
+              atau <a title="The complete archive of {{ site.name }}'s Blog by month"
+                    href="{{site.baseurl}}/monthview">waktu</a>
+          </div>
+      </div>
+  </div>
  
   <div id="pencarian" class="home">
      <script>
