--- a/category.html
+++ b/category.html
@@ -1,6 +1,7 @@
-         
 ---
 layout: page
+title: "Kategori"
+description: "Cari artikel yang kamu butuhkan disini"
 ---
 <h2>Postingan dari kategori {{ page.title }}</h2>
 
